# nan-discord-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  opencode.json  pyproject.toml
.github/workflows/: deploy.yml
bot/: base.py  config.py  knowledge.py  llm.py  metrics.py  news.py
bot/docs/knowledge/: getting-started.md  intro.md  models.md
