[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nan-discord-bot"
version = "0.1.0"
description = "Support bot for nan.builders Discord community"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.2",
    "openai>=1.30.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
